--- a/index.html
+++ b/index.html
@@ -11,162 +11,193 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #111;
-            color: #ddd;
+            background-color: #1e1e1e;
+            color: #f0f0f0;
             text-align: center;
         }
+
         header {
-            background-color: #3498db;
-            padding: 20px;
+            background-color: #2980b9;
+            padding: 40px;
             color: white;
+            border-bottom: 2px solid #3498db;
         }
+
         header h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 3em;
         }
+
         header p {
             margin: 10px 0;
-            font-size: 1.2em;
+            font-size: 1.5em;
         }
+
+        nav {
+            margin-top: 30px;
+        }
+
         nav a {
             display: inline-block;
             color: white;
             text-decoration: none;
-            padding: 12px 20px;
-            font-size: 1.1em;
+            padding: 15px 30px;
+            font-size: 1.2em;
             font-weight: bold;
-            border-radius: 5px;
-            margin: 8px;
-            background-color: #2980b9;
-            transition: background-color 0.3s;
+            border-radius: 8px;
+            margin: 10px;
+            background-color: #3498db;
+            transition: background-color 0.3s, transform 0.3s;
         }
+
         nav a:hover {
             background-color: #1c6ea4;
+            transform: scale(1.05);
         }
-        .admin-console, .login-panel {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
+
+        footer {
+            background-color: #2c3e50;
+            padding: 20px;
+            color: white;
+            margin-top: 40px;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 1.2em;
+        }
+
+        footer a {
+            color: #3498db;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        .video-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin: 40px 0;
+        }
+
+        .video-item {
+            width: 320px;
+            height: 180px;
+            background-color: #333;
+            border-radius: 10px;
+        }
+
+        iframe {
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            justify-content: center;
-            align-items: center;
+            border-radius: 10px;
         }
-        .console-content, .login-content {
-            background-color: #222;
+
+        .section-title {
+            font-size: 2em;
+            margin-top: 40px;
+            color: #3498db;
+        }
+
+        .collaborator-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .collaborator {
+            text-align: center;
+            background-color: #333;
             padding: 20px;
             border-radius: 10px;
-            text-align: center;
-            color: white;
+            width: 250px;
         }
-        .console-content input, .login-content input {
+
+        .collaborator img {
             width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            background-color: #333;
-            color: white;
-            border: 1px solid #444;
-            border-radius: 5px;
-            font-size: 1em;
+            height: auto;
+            border-radius: 8px;
         }
-        .console-content input:focus, .login-content input:focus {
-            outline: none;
-            border-color: #3498db;
-        }
-        button {
-            padding: 12px 20px;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
+
+        .collaborator p {
+            color: #fff;
+            margin-top: 10px;
             font-size: 1.1em;
-            transition: background-color 0.3s;
         }
-        button:hover {
-            background-color: #2980b9;
-        }
+
     </style>
 </head>
 <body>
     <header>
         <h1>Voxel Verse 🚀</h1>
-        <p>Creando mundos para ti 🌍</p>
-        <button onclick="toggleLoginPanel()">🔑 Iniciar sesión</button>
+        <p>CTodos nuestros sueños pueden hacerse realidad, si tenemos el coraje de perseguirlos ☄️</p>
         <nav>
-            <a href="#" onclick="alert('No tenemos mods por ahora')">🎮 Steam Workshop</a>
-            <a href="#" onclick="alert('No disponible por ahora')">🔵 Roblox</a>
+            <a href="updates.html">🎮 Actualizaciones</a>
+            <a href="contact.html">🧾 Contacto</a>
             <a href="404.html">⏳ Próximamente</a>
         </nav>
     </header>
 
-    <!-- Zona de administración (oculta por defecto) -->
-    <div class="admin-console" id="adminConsole">
-        <div class="console-content">
-            <h3>🖥 Consola de Administrador</h3>
-            <input type="text" id="commandInput" placeholder="Escribe un comando..." onkeydown="if(event.key==='Enter') executeCommand()" />
-            <div id="consoleOutput"></div>
-            <button onclick="toggleAdminConsole()">Cerrar</button>
+    <!-- Sección de videos -->
+    <div class="section-title">Nuestros Videos</div>
+    <div class="video-container" id="videoContainer">
+        <!-- Los videos se cargarán aquí -->
+    </div>
+
+    <!-- Sección de colaboradores -->
+    <div class="section-title">Nuestros Colaboradores</div>
+    <div class="collaborator-container">
+        <div class="collaborator">
+            <img src="https://cdn.discordapp.com/attachments/1315402050657583196/1338706056892649584/image.png?ex=67ac0eab&is=67aabd2b&hm=3b220ca9fb66f9bd6401dde55d150755ff432a66e2568e597b3030ded50e07dd&" alt="Axel Dev">
+            <p><strong>Axel Dev</strong></p>
+            <p>Un chico que sigue cumpliendo su sueño de ser streamer y youtuber, demostrando que todo puede ser posible.</p>
         </div>
     </div>
 
-    <!-- Panel de login -->
-    <div class="login-panel" id="loginPanel">
-        <div class="login-content">
-            <h2>🔑 Iniciar sesión</h2>
-            <input type="text" id="username" placeholder="Usuario" />
-            <input type="password" id="password" placeholder="Contraseña" />
-            <button onclick="loginUser()">Ingresar</button>
-            <button onclick="toggleLoginPanel()">Cerrar</button>
-        </div>
-    </div>
+    <footer>
+        <p>Desarrollado por <a href="https://codemaste001.github.io/CodeMaster001.github.io/" target="_blank">AlexDev</a></p>
+    </footer>
 
     <script>
-        // Función para mostrar/ocultar la consola de administración
-        function toggleAdminConsole() {
-            let consolePanel = document.getElementById('adminConsole');
-            if (consolePanel.style.display === 'none' || consolePanel.style.display === '') {
-                consolePanel.style.display = 'flex';  // Muestra la zona de admin
-            } else {
-                consolePanel.style.display = 'none';  // Oculta la zona de admin
+        const apiKey = 'AIzaSyCN1mR57K7dr91xPS5tetkcwBtQ4QUgZJE';  // Tu clave API de YouTube
+        const channelIds = [
+            'UCfbjCekh8ai0Fe_jUPrY50A',  // ID de CENTRICKGamesStudios
+            'UCGIWVAhQ-ukvFlx25-k6lPA'   // ID de Sonicinsano778
+        ];
+
+        // Función para obtener los videos más recientes de un canal
+        async function fetchVideos(channelId) {
+            const url = `https://www.googleapis.com/youtube/v3/search?key=${apiKey}&channelId=${channelId}&order=date&part=snippet&type=video&maxResults=5`;
+            const response = await fetch(url);
+            const data = await response.json();
+            return data.items;
+        }
+
+        // Función para insertar los videos en la página
+        async function loadVideos() {
+            const container = document.getElementById('videoContainer');
+            container.innerHTML = '';  // Limpiar los videos anteriores
+
+            for (let i = 0; i < channelIds.length; i++) {
+                const videos = await fetchVideos(channelIds[i]);
+                videos.forEach(video => {
+                    const videoElement = document.createElement('div');
+                    videoElement.classList.add('video-item');
+                    videoElement.innerHTML = `
+                        <iframe src="https://www.youtube.com/embed/${video.id.videoId}" frameborder="0" allowfullscreen></iframe>
+                    `;
+                    container.appendChild(videoElement);
+                });
             }
         }
 
-        // Ejecuta un comando en la consola
-        function executeCommand() {
-            const input = document.getElementById('commandInput');
-            const output = document.getElementById('consoleOutput');
-            const command = input.value;
-            output.innerHTML += `<p>> ${command}</p>`;
-            input.value = '';
-        }
-
-        // Función para mostrar/ocultar el panel de login
-        function toggleLoginPanel() {
-            let loginPanel = document.getElementById('loginPanel');
-            if (loginPanel.style.display === 'none' || loginPanel.style.display === '') {
-                loginPanel.style.display = 'flex';  // Muestra el panel de login
-            } else {
-                loginPanel.style.display = 'none';  // Oculta el panel de login
-            }
-        }
-
-        // Función de inicio de sesión
-        function loginUser() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-
-            // Comprobación de las credenciales
-            if (username === 'admin' && password === 'admin001') {
-                alert('Inicio de sesión exitoso');
-                toggleAdminConsole(); // Mostrar la consola al iniciar sesión como admin
-                toggleLoginPanel();  // Cerrar el panel de login
-            } else {
-                alert('Credenciales incorrectas. Intenta de nuevo.');
-            }
-        }
+        // Cargar los videos al inicio
+        loadVideos();
     </script>
 </body>
 </html>
