--- a/updates.html
+++ b/updates.html
@@ -3,59 +3,209 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página no disponible</title>
-    <meta http-equiv="refresh" content="3; url=404.html">
+    <title>Actualizaciones - Voxel Verse</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="styles/style.css">
     <style>
+        /* Estilo general */
         body {
-            background: #f8f8f8;
             font-family: 'Roboto', sans-serif;
-            color: #333;
+            margin: 0;
+            padding: 0;
+            background-color: #2C3E50; /* Fondo oscuro */
+            color: #ecf0f1; /* Texto claro */
+            display: flex;
+            flex-direction: column;
             min-height: 100vh;
+        }
+
+        /* Cabecera */
+        header {
+            background-color: rgba(34, 49, 63, 0.9); /* Azul oscuro */
+            color: white;
+            padding: 20px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Barra de navegación */
+        nav {
+            background-color: rgba(51, 51, 51, 0.9);
+            color: white;
+            padding: 10px;
+            text-align: center;
             display: flex;
             justify-content: center;
-            align-items: center;
+            gap: 20px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s, transform 0.3s;
+            font-size: 16px;
+        }
+
+        nav a:hover, nav a.active {
+            background-color: #22313F; /* Azul oscuro */
+            transform: scale(1.1);
+        }
+
+        /* Estado del juego */
+        .game-status {
+            background-color: #e74c3c; /* Rojo para inactivo */
+            color: white;
             text-align: center;
+            padding: 15px;
+            font-size: 18px;
+            font-weight: bold;
+            margin-top: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Contenido principal */
+        main {
+            flex: 1;
+            padding: 40px;
+            max-width: 1200px;
+            margin: 20px auto;
+            display: flex;
             flex-direction: column;
+            gap: 30px;
+            background-color: rgba(255, 255, 255, 0.1); /* Fondo ligeramente transparente */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
+        /* Sección de actualizaciones */
+        .update {
+            padding: 20px;
+            background-color: rgba(44, 62, 80, 0.8); /* Fondo oscuro pero con transparencia */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+            border-left: 5px solid #4CAF50;
         }
 
-        p {
-            font-size: 1.2rem;
+        .update:hover {
+            transform: translateY(-5px);
         }
 
-        .maintenance-logo {
-            width: 150px;
-            margin-bottom: 30px;
+        h2 {
+            color: #ecf0f1;
         }
 
+        h3 {
+            color: #bdc3c7;
+        }
+
+        ul {
+            list-style-type: square;
+            margin-left: 20px;
+        }
+
+        /* Estilo de pie de página */
         footer {
-            margin-top: 30px;
-            color: #888;
-            font-size: 1rem;
+            background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro */
+            color: white; /* Texto blanco */
+            text-align: center;
+            padding: 20px 0;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
         }
 
         footer a {
-            color: #3498db;
+            color: #4CAF50; /* Verde */
             text-decoration: none;
+            font-weight: bold;
         }
 
         footer a:hover {
             text-decoration: underline;
         }
+
+        /* Diseño responsivo */
+        @media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+            }
+
+            main {
+                padding: 20px;
+            }
+
+            .update {
+                padding: 15px;
+            }
+
+            footer {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/OOjs_UI_icon_gear-ltr.svg/1200px-OOjs_UI_icon_gear-ltr.svg.png" alt="Logo de mantenimiento" class="maintenance-logo">
-    <h1>Página en mantenimiento</h1>
-    <p>La página de actualizaciones no está disponible en este momento. Serás redirigido a la página de error en breve...</p>
+    <header>
+        <h1>Actualizaciones de Voxel Verse</h1>
+    </header>
+    <nav>
+        <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
+        <a href="updates.html" class="active"><i class="fas fa-bug"></i> Actualizaciones</a>
+        <a href="contact.html"><i class="fas fa-envelope"></i> Contacto</a>
+    </nav>
+    
+    <!-- Estado del juego -->
+    <div class="game-status">
+        El juego está inactivo. No ha obtenido actualizaciones recientemente.
+    </div>
+
+    <main>
+        <section class="update">
+            <h2>Actualización 1.0.2</h2>
+            <p><strong>Jun Arreglado</strong></p>
+            <p>La ultimate de jun se arreglo y ya funciona,
+                Habilidades 2 y 3 arregladas (antes no te dejaba moverte ahora si)
+                Antes la ulti se te bugeaba la camara
+            </p>
+            <h3>Okarun Arreglado</h3>
+            <p>La ultimate 1 y 3 de okarun se arreglo, junto a eso la habilidad 4 se arreglo</p>
+            <h3>Nuevos emotes y mejoras de camaras de movimiento</h3>
+            <p>Se añadieron nuevos emotes que no dire para no arruinar la sorpresa 
+                Se mejoraron las camaras de movimiento para las ultimates 
+            </p>
+            <h3>Nueva pagina web</h3>
+            <p>Su fundador Alex Dev, Rogsc y Axel hicieron una pagina web de voxelverse studios, ahi se subiran todos los proyectos que tiene voxelverstudios, como por ejemplo: KJ REMAKE, y nuestro reciente proyecto: Fields Of The Universe.</p>
+            <h3>¡Gracias por leer!</h3>
+        </section>
+        <section class="update">
+            <h2>Actualización 1.0.1</h2>
+            <p><strong>Jun</strong></p>
+            <p>El personaje Jun es el más roto del juego y de los más bugeados. Se está buscando en los archivos del juego el bug/error para solucionarlo lo más rápido posible. Esto podría tardar unos días o semanas, depende de cuándo el dev trabaje. Por ahora, tenemos entendido que trabajará toda la semana y el domingo tendrá un descanso.</p>
+            <h3>2 cosas nuevas:</h3>
+            <ul>
+                <li>Llegarán nuevos logos y banners a los personajes y al juego en general.</li>
+                <li>Se espera que los emotes ya no sean 77 sino más, depende de cuál meme escojan y se trabaje más rápido para poder terminarlo.</li>
+            </ul>
+            <h3>Okarun (Solucionado)</h3>
+            <p>Okarun ha sido solucionado con sus bugs y errores. El personaje se encuentra 100% jugable y sin errores. Tal vez la hitbox sea un error ya que Jun, cuando te golpea, te llega a quitar la movilidad y te deja quieto. Es otra cosa que estamos arreglando.</p>
+        </section>
+        <section class="update">
+            <h2>Actualización 1.0.0</h2>
+            <p><strong>Emotes</strong></p>
+            <p>Después de estar trabajando nos acordamos de que teníamos que meter emotes y ya lo hicimos oficialmente. Ahora tenemos:</p>
+            <ul>
+                <li>77 emotes, más que los que tenía KJ Remake.</li>
+                <li>KJ Remake tenía unos 20 e incluso menos. Eso sería todo sobre los emotes.</li>
+            </ul>
+        </section>
+        <!-- Añade más secciones de actualizaciones aquí -->
+    </main>
     <footer>
-        <p>&copy; 2024 Centrick Games | <a href="index.html">Volver al inicio</a></p>
+        <p>&copy; 2024 Centrick Games</p>
+        <p>Creadores: Alex Dev</p>
     </footer>
 </body>
 </html>
