--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
 
     <footer>
-        <p>Desarrollado por <a href="https://codemaste001.github.io/CodeMaster001.github.io/" target="_blank">AlexDev</a></p>
+        <p>Desarrollado por <a href="https://github.com/CodeMaste001" target="_blank">AlexDev</a></p>
     </footer>
 
     <script>
