--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="collaborator">
             <img src="https://cdn.discordapp.com/attachments/1337461320500383779/1339734843340226611/image.png?ex=67afcccd&is=67ae7b4d&hm=e8d55d1e92a19785d69b83d02b5b22f597682e96bf860a86a0fe88cc0f8b2bf1&" alt="Axel Dev">
             <p><strong>Axel Dev</strong></p>
-            <p>Un chico que sigue cumpliendo su sueño de ser streamer y youtuber, demostrando que todo puede ser posible.</p>
+            <p>Axel uno de nuestros mejores trabajadores y colaboradores de voxel sin el los mapas de los juegos no estarias hechos.</p>
         </div>
     </div>
 
